// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostgreSqlAdapter > configuration > connection > database > throws an error when database is empty 1`] = `
[ZodError: [
  {
    "origin": "string",
    "code": "too_small",
    "minimum": 1,
    "inclusive": true,
    "path": [
      "connection",
      "database"
    ],
    "message": "Too small: expected string to have >=1 characters"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > database > throws an error when database is not provided 1`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "connection",
      "database"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > host > throws an error when host is empty 1`] = `
[ZodError: [
  {
    "origin": "string",
    "code": "too_small",
    "minimum": 1,
    "inclusive": true,
    "path": [
      "connection",
      "host"
    ],
    "message": "Too small: expected string to have >=1 characters"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > host > throws an error when host is not provided 1`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "connection",
      "host"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > password > throws an error when password is empty 1`] = `
[ZodError: [
  {
    "origin": "string",
    "code": "too_small",
    "minimum": 1,
    "inclusive": true,
    "path": [
      "connection",
      "password"
    ],
    "message": "Too small: expected string to have >=1 characters"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > password > throws an error when password is not provided 1`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "connection",
      "password"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > port number > throws an error when port is not a number 1`] = `
[ZodError: [
  {
    "expected": "number",
    "code": "invalid_type",
    "path": [
      "connection",
      "port"
    ],
    "message": "Invalid input: expected number, received string"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > user > throws an error when user is empty 1`] = `
[ZodError: [
  {
    "origin": "string",
    "code": "too_small",
    "minimum": 1,
    "inclusive": true,
    "path": [
      "connection",
      "user"
    ],
    "message": "Too small: expected string to have >=1 characters"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > user > throws an error when user is not provided 1`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "connection",
      "user"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > extraColumnName > should throw if empty 1`] = `
[ZodError: [
  {
    "origin": "string",
    "code": "too_small",
    "minimum": 1,
    "inclusive": true,
    "path": [
      "table",
      "extraColumnName"
    ],
    "message": "Too small: expected string to have >=1 characters"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > extraColumnName > should throw if not a string 1`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "table",
      "extraColumnName"
    ],
    "message": "Invalid input: expected string, received number"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > keyColumnName > should throw if empty 1`] = `
[ZodError: [
  {
    "origin": "string",
    "code": "too_small",
    "minimum": 1,
    "inclusive": true,
    "path": [
      "table",
      "keyColumnName"
    ],
    "message": "Too small: expected string to have >=1 characters"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > keyColumnName > should throw if not a string 1`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "table",
      "keyColumnName"
    ],
    "message": "Invalid input: expected string, received number"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > tableName > should throw if empty 1`] = `
[ZodError: [
  {
    "origin": "string",
    "code": "too_small",
    "minimum": 1,
    "inclusive": true,
    "path": [
      "table",
      "tableName"
    ],
    "message": "Too small: expected string to have >=1 characters"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > tableName > should throw if not a string 1`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "table",
      "tableName"
    ],
    "message": "Invalid input: expected string, received number"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > valueColumnName > should throw if empty 1`] = `
[ZodError: [
  {
    "origin": "string",
    "code": "too_small",
    "minimum": 1,
    "inclusive": true,
    "path": [
      "table",
      "valueColumnName"
    ],
    "message": "Too small: expected string to have >=1 characters"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > valueColumnName > should throw if not a string 1`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "table",
      "valueColumnName"
    ],
    "message": "Invalid input: expected string, received number"
  }
]]
`;
